--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day2-style-question",
+  "name": "day3-layout-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,11 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "nuxt": "^3.12.4",
     "vue": "latest"
-  },
-  "devDependencies": {
-    "sass": "^1.70.0"
   }
 }
