day18-plugin-use

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day17-plugin-directive-question",
+  "name": "day18-plugin-use-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,14 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/scripts": "^0.7.1",
-    "@popperjs/core": "^2.11.8",
-    "axios": "^1.7.5",
-    "bootstrap": "^5.3.3",
-    "nuxt": "^3.12.4",
-    "vue": "latest"
-  },
-  "devDependencies": {
-    "sass": "1.70.0"
+    "nuxt": "^3.13.0",
+    "vue": "latest",
+    "vue-loading-overlay": "6.0",
+    "vue-router": "latest"
   }
 }
