--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day18-plugin-use-question",
+  "name": "day19-pinia-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,9 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.4",
+    "bootstrap": "^5.3.3",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.2",
     "vue": "latest",
-    "vue-loading-overlay": "6.0",
     "vue-router": "latest"
+  },
+  "overrides": {
+    "vue": "latest"
+  },
+  "devDependencies": {
+    "sass": "1.70"
   }
 }
