day21-vee-validate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day20-pinia-api-question",
+  "name": "day21-vee-validate-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,16 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.5.4",
+    "@vee-validate/i18n": "^4.13.2",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/rules": "^4.13.2",
     "bootstrap": "^5.3.3",
-    "nuxt": "^3.13.0",
-    "pinia": "^2.2.2",
-    "vue": "latest"
+    "nuxt": "3.12.4",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "sass": "1.70.0"
-  },
-  "overrides": {
-    "vue": "latest"
+    "sass": "1.70"
   }
 }
