--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day22-swiper-question",
+  "name": "day23-vcalendar-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,13 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
-    "nuxt": "^3.12.4",
-    "swiper": "^11.1.14",
-    "vue-router": "latest"
+    "nuxt": "^3.13.0",
+    "v-calendar": "^3.1.2",
+    "vue-router": "latest",
+    "vue-screen-utils": "^1.0.0-beta.13"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.1.2",
     "sass": "1.70"
   }
 }
