--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day23-vcalendar-question",
+  "name": "day24-booking-question",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,11 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
+    "@pinia/nuxt": "^0.5.4",
     "@popperjs/core": "^2.11.8",
+    "@vee-validate/i18n": "^4.13.2",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/rules": "^4.13.2",
     "bootstrap": "^5.3.3",
-    "nuxt": "^3.13.0",
+    "nuxt": "3.12.4",
+    "pinia": "^2.2.2",
+    "swiper": "^11.1.9",
     "v-calendar": "^3.1.2",
-    "vue-router": "latest",
+    "vue": "^3.4.20",
     "vue-screen-utils": "^1.0.0-beta.13"
   },
   "devDependencies": {
